--- a/e2e/project/package.json
+++ b/e2e/project/package.json
@@ -25,6 +25,7 @@
     "e2e-wp-source-errors": "^1.0.0",
     "e2e-script": "^1.0.0",
     "e2e-switch": "^1.0.0",
+    "e2e-tiny-router": "^1.0.0",
     "frontity": "^1.5.0"
   }
 }
